--- a/week_1/day_1/index.html
+++ b/week_1/day_1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 1 | Index</title>
+    <title>W1 D1 | Index</title>
 </head>
 <body>
     <h1>Media Online</h1>
